register and login done and working smootly

--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ PUBLIC_PATH=public
 JWT_SEED=$uP3rS3Cr3t@
 
 
-POSTGRES_URL="postgresql://postgres:123456@localhost:5432/TODO"
+POSTGRES_URL="postgresql://postgres:12345@localhost:5432/orders"
+
 POSTGRES_USER=postgres
 POSTGRES_DB=TODO
 POSTGRES_PORT=5432
