--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "env-var": "^7.4.1",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react": "^7.37.4",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "table": "^6.9.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
@@ -56,6 +59,6 @@
     "typescript": "^5.4.2"
   },
   "eslintConfig": {
-    "extends":"standard"
+    "extends": "standard"
   }
 }
