readme configured successfully

--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ POSTGRES_PASSWORD=123456
 
 NODE_ENV=development
 
-MAILER_SECRET_KEY=zbfzlbssqohczecs
-MAILER_EMAIL=brayanroa38@gmail.com
-MAILER_SERVICE=gmail
+# MAILER_SECRET_KEY=zbfzlbssqohczecs
+# MAILER_EMAIL=brayanroa38@gmail.com
+# MAILER_SERVICE=gmail
 
 WEB_SERVICE_URL=http://localhost:3000/api/v1
