--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development tsnd --respawn --clear src/app.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "set NODE_ENV=production&&npm run build && node dist/app.js",
+    "start": "NODE_ENV=production&&npm run build && node dist/app.js",
     "prisma:migrate:test": "dotenv -e .env.test -- npx prisma migrate deploy",
     "prisma:migrate:prod": "prisma migrate deploy",
     "test": "npm run prisma:migrate:test && jest",
